# unsupervised-dna

./: .gitignore  Examples.ipynb  Predict.ipynb  README.md  app.py  checkpoint.dvc  data.dvc  encode_seq.py  encoding.dvc  generate_fcgr.py  metadata-fcgr.csv.dvc  nextclade.csv.dvc  parameters.py  pyproject.toml  run.sh  train.py
.dvc/: config
test/: encode-seq.csv
tests/: test_fcgr.py  test_perturbation.py  test_unsupervised_dna.py
unsupervised_dna/: __init__.py  dataset.py  fcgr.py  image_loader.py  model_loader.py  monitor_values.py  perturbation.py
unsupervised_dna/models/: TEMPLATE.py  custom_layers.py  custom_losses.py  vae_7mer.py  vae_8mer.py
