[tool.poetry]
name = "unsupervised-dna"
version = "0.1.0"
description = ""
authors = ["Jorge <jorgeavilacartes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.6.0"
streamlit = "^0.88.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
